...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Agora Gaming" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oh4-6y-kRz">
                                <rect key="frame" x="86" y="110" width="204" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Channel name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Az5-Ce-7ba">
                                <rect key="frame" x="50" y="166.5" width="275" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" returnKeyType="join" enablesReturnKeyAutomatically="YES"/>
                                <connections>
                                    <action selector="doRoomNameTextFieldEditing:" destination="VcX-zs-g89" eventType="editingChanged" id="No3-gG-js3"/>
                                    <outlet property="delegate" destination="VcX-zs-g89" id="5XW-9Q-wTv"/>
...
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a2R-Ht-mig">
                                <rect key="frame" x="133.5" y="256.5" width="108" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="108" id="QQe-Vc-5lW"/>
                                </constraints>
                                <state key="normal" title="Join"/>
                                <connections>
                                    <action selector="doJoinPressed:" destination="VcX-zs-g89" eventType="touchUpInside" id="I4Y-3P-srl"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
